numbat/tests/snapshots/prelude_and_examples__parse_error_snapshots@expected_type_parameter_name.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/parse_error/expected_type_parameter_name.nbt
---
error: while parsing
  ┌─ <internal:3>:1:6
  │
1 │ fn f<2>() = 1
  │      ^ Expected identifier (type parameter name)
